--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,1 +1,9 @@
-html
+!DOCTYPE html>
+<HTML lang="en">
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+        <H1>Number: {{ value }}</H1>
+    </BODY>
+</HTML>
